public/css/videoChatPlayer.css
body {
	overflow: hidden;	
	background-color:#0e0e10;
    color: white;

    font-family: "Inter", "Helvetica Neue", Helvetica, Arial, sans-serif;
}  

video, input {
    display: inline;
}
video {
	width:calc(100% - 341px);
	height: 100%;
	position: absolute;
    top: 0;
    left: 0;
}

/* #videoPlayer{
	
} */

.video-container:hover .custom-controls {
	opacity: 100%;
	animation: fadeInAnimationBar ease 0.3s;
}
.video-container .custom-controls {
	animation: fadeOutAnimationBar ease 0.3s;
	opacity: 0%;
}

  
@keyframes fadeInAnimationBar {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
     }
}
@keyframes fadeOutAnimationBar {
    100% {
        opacity: 0;
    }
    0% {
        opacity: 1;
     }
}

/* Custom Video Controls bar */
.custom-controls {
	position: absolute;
	width:calc(100% - 341px);
	height: 55px;
	background-color: green;
	background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.5));
	bottom: 0;
	left: 0;
    z-index: 999;
}
.progress-bar {
	margin: auto;
	width:calc(100% - 20px);
	height: 5px;
	background-color: #626262;
	opacity: 0.8;
}
.bar {
	margin: auto;
	width:80%;
	height: 5px;
	background-color: #ff0000;
	opacity: 0.8;
	left: 0;
}

.custom-controls .button {
    /* height: 25px; */
    margin: 3px 12px;
    padding: 5px 12px;

    background: transparent;
    cursor: pointer;
    
    border: black solid 3px;
    border-radius: 5px;
    
    transition: 100ms all ease;
}
.custom-controls .button:hover {
    border: black solid 5px;
    padding: 3px 10px;
}
.custom-controls .button:selected {
    border: black inset 5px;
    padding: 3px 10px;
}


/* Example using css transitions for button icons:
*    https://codepen.io/zhangzhuo/pen/LNGLOz
*/
.custom-controls #playpause, .custom-controls #stop {
    display: inline-block;
    width: 25px;
    height: 25px;
    cursor: pointer;
}
.play-button {
    display: inline-block;
    position: absolute;
    width: 25px;
    height: 25px;
    background: #ffffff;
    transition: clip-path .3s ease;
}
.stop-button {
    display: inline-block;
    position: absolute;
    width: 25px;
    height: 25px;
    /* background: #FF0000; */
    transition: clip-path .3s ease;
}
.play-button-before {
    clip-path: polygon(0 0, 50% 25%, 50% 75%, 0% 100%);
    background: #ffffff38;
}
.play-button-after {
    clip-path: polygon(50% 25%, 100% 50%, 100% 50%, 50% 75%);
    background: #ffffff38;
}
#playpause.play:hover .play-button-before {
    clip-path: polygon(0 0, 50% 25%, 50% 75%, 0% 100%) !important;
    background: #ffffff;
}
#playpause.play:hover .play-button-after {
    clip-path: polygon(50% 25%, 100% 50%, 100% 50%, 50% 75%) !important;
    background: #ffffff;
}
#playpause.pause .play-button-before {
    clip-path: polygon(0 0, 30% 0, 30% 100%, 0% 100%);
    background: #ffffff;
}
#playpause.pause .play-button-after{
    clip-path: polygon(70% 0, 100% 0, 100% 100%, 70% 100%);
    background: #ffffff;
}
.stop-button-before {
    clip-path: polygon(20% 20%, 20% 80%, 80% 80%, 80% 20%);
    background: #ff000038;
}
.stop-button-before:hover {
    clip-path: polygon(10% 10%, 10% 90%, 90% 90%, 90% 10%);
    background: #FF0000;
  }

.buttonX {
	/* position:absolute; */
	/* top: 14px; */
	/* left: 25px;	 */
	border: 0;
	background: transparent;
	box-sizing: border-box;
	width: 0;
	height: 25px;

	border-color: transparent transparent transparent #e5e5e5;
	transition: 100ms all ease;
	cursor: pointer;

	border-style: solid;
	border-width: 12px 0 12px 20px;
}

/* Custom Video Controls bar Ends */
#topBox {
	width: 340px;
	border-left: 1px solid #303032;
	position:absolute;
	top: 0;
	right: 0;
    bottom: 0;
	background-color: #1f1f23;
}

#topBox > div.header {
    height: auto;
    margin: 3px 7px;
}

#topBox .topBoxTitle {
    width: 55px;
}

#controls {
    display: inline-block;
}


#chat {
    width: 100%;
    border-left: 1px solid #303032;
	border-top: 1px solid #303032;
    /* height: calc(100% - 50px); */
    height: auto;
  
	overflow-y: auto;
	background-color:#18181b;
	color: rgb(222, 222, 227);
	font-size: 13px;
	font-weight: 400;
	line-height: 20px;
	overflow-x: hidden;
}

input {
    width: 275px;
	background-color:#2b2b2f;
	font-size: 12px;
	font-weight: 400;
}


.info {
	font-family: "Inter";
}

.error {
    background-color: red;
    color: white;
}

.flex {
    display: flex;
}

.center {
    text-align: center;
}

.chatline {
    display: flex;
    white-space: nowrap;
}

.chattime {
    margin: 0 10px 0 7px;
    vertical-align: top;

    font-size: 12px;
    font-weight: 400;
}

.chatbody {
    white-space: normal;
    margin-right: 6px;
}

.commenter {
    font-weight: bolder;
}

.messagePrefix {
    margin-right: 3px;
}

.video-time {
    border: #000000 2px solid;
    border-radius: 5px;
    background-color: #333333;

    margin: 3px 17px;
    padding: 1px 13px;
    height: 20px;
    width: 326px;
}

